# jikan

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SYNTAX.md  daemonize.sh  func.py  install.sh  jikanctl
.github/workflows/: release.yaml
examples/composer/.jikan/workflows/: composer.yaml
examples/composer/actions/demo/: action.yaml  index.js
examples/composer/actions/pydemo/: action.yaml  main.py
examples/daily-brief/: daily_brief.md
examples/daily-brief/.jikan/workflows/: daily-brief.yaml
examples/summarize-news/: func.py
examples/summarize-news/.jikan/workflows/: summarize-news.yaml
jikan/: Cargo.toml
jikan/src/: main.rs
jikanctl/: Cargo.toml
jikanctl/src/: main.rs
jikand/: Cargo.toml
jikand/src/: main.rs
jk/: Cargo.toml
jk/src/: main.rs
src/: main.rs
workflows/: workflow-now.yaml
