[workspace]
members = ["jikan", "jk"]
default-members = ["jikan", "jk"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["drbh"]

[workspace.dependencies]

[profile.release]
incremental = true

[profile.release-binary]
inherits = "release"
debug = 1
incremental = true
panic = "abort"

[profile.release-opt]
inherits = "release"
debug = 0
incremental = false
lto = "fat"
opt-level = 3
codegen-units = 1
