[package]
name = "jikand"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
anyhow = "1.0.86"
chrono = "0.4.38"
clap = "4.5.16"
cron = "0.12.1"
daemonize = "0.5.0"
dirs = "5.0.1"
libc = "0.2.158"
minijinja = "2.2.0"
parking_lot = "0.12.3"
redb = "2.1.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_yaml = "0.9.34"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
walkdir = "2.5.0"
